--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,13 @@
         "laravel/framework": "^5.8.0",
         "laravel/tinker": "~1.0",
         "unisharp/laravel-ckeditor": "^4.7",
-        "zbateson/mail-mime-parser": "^1.1"
+        "zbateson/mail-mime-parser": "^1.1",
+        "nunomaduro/collision": "~1.1"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
-        "nunomaduro/collision": "~1.1",
         "phpunit/phpunit": "~7.0",
         "symfony/thanks": "^1.0"
     },
