--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,10 @@
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~4.0",
         "guzzlehttp/guzzle": "^6.3",
-        "laravel/framework": "^5.8.0",
+        "laravel/framework": "^5.6.0",
         "laravel/tinker": "~1.0",
         "unisharp/laravel-ckeditor": "^4.7",
-        "zbateson/mail-mime-parser": "^1.1",
-        "nunomaduro/collision": "~1.1"
+        "zbateson/mail-mime-parser": "^1.1"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
