--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "beyondcode/laravel-mailbox": "^1.3",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~4.0",
         "guzzlehttp/guzzle": "^6.3",
