--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,12 @@
         "php": ">=7.1.3",
         "beyondcode/laravel-mailbox": "^1.3",
         "doctrine/dbal": "^2.6",
+        "khill/lavacharts": "3.1.*",
         "fideloper/proxy": "~4.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^5.6.0",
         "laravel/tinker": "~1.0",
+        "maatwebsite/excel": "^3.1",
         "unisharp/laravel-ckeditor": "^4.7",
         "zbateson/mail-mime-parser": "^1.1"
     },
